--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -124,22 +124,22 @@
     {% if user.is_authenticated %}
     {% if liked %}
     <div class="col mb-3 px-2">
-        <span id="likes_total"><i class="fa-solid fa-heart"></i>{{ no_of_likes }}</span>
+        <span id="likes_total"><i class="fas fa-solid fa-thumbs-down"></i>{{ no_of_likes }}</span>
     
-    <button type="submit", name="postlikes-button" value="{{ post.id }}", class="btn btn-danger mt-1"><i class="fa-solid fa-heart"></i>
+    <button type="submit", name="postlikes-button" value="{{ post.id }}", class="btn btn-danger mt-1"><i class="fas fa-solid fa-thumbs-down"></i>
         Unlike</button> 
 
 </div>
 {% else %}
 <div class="col mb-3 px-2">
-    <span id="likes_total"><i class="fa-solid fa-heart"></i>{{ no_of_likes }}</span>
+    <span id="likes_total"><i class="fas fa-solid fa-thumbs-up"></i>{{ no_of_likes }}</span>
     <button type="submit" name="postlikebutton" value="{{ post.pk }}"
-    class="btn btn-success mt-1"><i class="fa-regular fa-heart"></i>Like</button>
+    class="btn btn-success mt-1"><i class="fas fa-regular fa-thumbs-up"></i>Like</button>
 </div>
 {% endif %}
 {% else %}
 
-<h4>To like this post please <a href="{% url 'register' %}">register</a> or<a href="{% url 'login' %}">login</a>Thank You.  </h4>
+<h4>To like this post please <a href="{% url 'register' %}">register</a> or<a href="{% url 'login' %}">login</a>Thank You.</h4>
 
 
 <a href="{% url 'postread' %}">Home</a>  
