Work on menu items and welcome note in nav branch
base.html added dancing script google font link to head to
diferentiate the welcome message from the menu items in the nav bar.
Added span and classes to line circa 91 and 92 in base.html in order
to style same in style.css.  In postread added space around
pagination number and added a style class to change color and
increase size of font.  Logout.html style heading, form and button.
signup.html style headings and form.  postdetail.html comment out
a closing div.  In views.py change paginate_by to 4 at line
circa 130. Urls.py removed extra lines.  Style.css added styling for
nav links, pagination, welcome note and username, signin and signup
pages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,11 @@ body {
 
 .nav-link {
     color: white !important;
+    font-size: 30px;
+    justify-content: end;
+   
+
+
 }
 
 .nav-link:hover {
@@ -104,6 +109,44 @@ h4, h5, .phone, .email, .contribute  {
 
 .phone, .email, .contribute {
     font-size: larger;
+}
+
+
+/* postread page */
+
+
+
+.page-item,
+.page-link {
+    color:rgb(1, 116, 129);
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.page-item:hover,
+.page-link:hover {
+    color:white;
+
+}
+
+.card {
+    margin: 0 auto;
+}
+
+
+.pagination-number {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.pagination-number:hover {
+    color: white;
+}
+
+.welcome,
+.username {
+    font-family: 'Dancing Script';
+    color: rgb(237,177,79);
 }
 
 /* postdetail page */
@@ -216,7 +259,12 @@ h4, h5, .phone, .email, .contribute  {
 }
 .container-main {
     /* margin-top: 20%; */
-    justify-content: center;
+   /* display: flex; */
+    /* padding-left: 280px; */
+   /* justify-content: center;
+   align-items: center;
+   height: 100vh; */
+   /* margin-left: 15%; */
 }
 
 
@@ -298,6 +346,67 @@ h4, h5, .phone, .email, .contribute  {
 .create-submit:hover {
     background-color: rgb(237,177,79);
 }
+
+
+/* Sign out */
+
+
+.signout-heading {
+    margin-top: 5px;
+    color: black;
+}
+
+.signout-button {
+
+    background-color:  rgb(1, 116, 129);
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  
+    margin-top: 200px;
+    
+    }
+
+    .signouth3 {
+        text-align: center;
+    }
+
+    /* signup */
+
+    .center-form {
+        margin: 0 auto;
+        max-width: 450px;
+    }
+
+    .signup {
+        font-size: 30px;
+    }
+
+    .signup input {
+        width: 100%;
+        margin-bottom: 10px;
+        font-size: 30px;
+       
+    }
+
+    .signup button {
+        background-color:  rgb(1, 116, 129);
+        padding: 10px;
+        font-size: 20px;
+        color: white;
+        text-decoration: none;
+       
+    }
+
+
+
+
 
 
 
