--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,18 +5,29 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<h1 class="text-center signout-heading">{% trans "Sign Out" %}</h1>
+<br>
+<br>
+<br>
+
+<h3 class="signouth3">{% trans 'Are you sure you want to sign out?' %}</h3>
+<br>
+<br>
+<br>
+<div class="container">
+  <div class="center-form col-md-6" style="margin-top: -40px">
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button type="submit" class="signout-button">{% trans 'Sign Out' %}</button>
   <!-- {% include 'messages.html' %} -->
 </form>
+</div>
+</div>
 
 
 {% endblock %}
