--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,10 +8,18 @@
 
 
 
-<h1>{% trans "Sign Up" %}</h1>
+<h1 class="text-center">{% trans "Sign Up" %}</h1>
+<br>
+<br>
+<br>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<h3>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</h3>
+<br>
+<br>
+<br>
 
+<div class="container">
+  <div class="center-form col-md-6" style="margin-top: -40px">
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
@@ -21,5 +29,6 @@
   <button type="submit">{% trans "Sign Up" %} &raquo;</button>
   <!-- {% include 'messages.html' %} -->
 </form>
-
+</div>
+</div>
 {% endblock %}
