--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,11 @@
       
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+      
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Archivo&family=Dancing+Script&family=Great+Vibes&family=Lato&display=swap" rel="stylesheet">
+
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,7 +27,7 @@
           integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
       </script>
       <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+    
   </head> 
 
   <body>
@@ -83,11 +88,13 @@
 
           {% if user.is_authenticated %}
           <!-- <div class="welcome " style="font-weight: bold;"> -->
-           <div style="font-weight: bold" class="fs-3">Welcome :  &nbsp {{ user.username }}</div>
+           <div style="font-weight: bold" class="fs-3">
+              <span class="welcome">Welcome :  </span>&nbsp; 
+              <span class="username">{{ user.username }}</span>&nbsp &nbsp &nbsp &nbsp</div>
         
 
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto nav justify-content-end fs-3">
+            <ul class="navbar-nav ml-auto nav fs-3">
 
               
           
@@ -100,11 +107,11 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
-            {% comment %}
+            <!-- {% comment %} -->
             <!-- <li class="nav-item">
               <a class="nav-link" href="{% url 'categoryadd' %}">Add A Category</a>
             </li>  -->
-            {% endcomment %}
+            <!-- {% endcomment %} -->
             <li class="nav-item">
               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li> 
@@ -131,7 +138,7 @@
           <button class="btn btn-outline-success" type="submit">Search</button> -->
         </form>
       <!-- </div> -->
-   hello 
+   
   </nav>
 </div>
 <div class="bg-color-main">
