--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -143,7 +143,7 @@
                     <i class="fas fa-thumbs-down"></i>
                      like</button>   -->
 
-                </div>
+                <!-- </div> -->
             {% else %}
                  <div class="col mb-3 px-2">
                     
