--- a/templates/postread.html
+++ b/templates/postread.html
@@ -12,7 +12,7 @@
             {% for post in object_list %}
             <div class="col-md-4">
             
-         
+           
                 <div class="card text-white bg-special mb-3 shadow-lg mb-6">
                     <div class="text-center card-image">
                     <img src="{{ post.image.url }}" class="card-img" alt="post-image" style="width: 500px; height: 300px">
@@ -53,8 +53,10 @@
               <span class="sr-only">Previous</span>
             </a> -->
           </li>
+      
+
           {% endif %}
-          <span>{{ page_obj.number}}</span>
+          <span class="pagination-number">&nbsp; {{ page_obj.number}} &nbsp;</span>
           {% if page_obj.has_next %}
           <li><a class="page-link" href="?page={{ page_obj.next_page_number }}" class="page-link">Next &raquo;</a></li>
           {% endif %}
