--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
   <div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-col">
     <div class="container-logo p-3">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{% url 'postread' %}">
       <img src="{% static 'images/Logo.jpg' %}" alt="logo" class="img-fluid rounded-circle" style="width: 300px; height: 150px">
       </a>
       
