--- a/templates/commentadd.html
+++ b/templates/commentadd.html
@@ -13,6 +13,7 @@
     {% csrf_token %}
    
     {{ form.as_p }}
+    <input type="hidden" name="post_id" value="{{ post.pk }}">
     
     <input type="Submit" value="Submit" class="create-submit">
  
