Fix placeholder image and no of likes functionalit
Added link for placeholder to postdetail.html. Correct authentication
of no of likes on postdetail.  postread added placeholder image.
Removed image field from the card element.  Get "please login to
like or comment on a post" to display when user is not logged in.
split code between two lines in pagination number code.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,6 +133,16 @@ h4, h5, .phone, .email, .contribute  {
     margin: 0 auto;
 }
 
+.style-no_of_likes {
+    color: rgb(237,177,79);
+    font-size: 20px;
+   
+}
+
+.alike {
+    text-decoration: none;
+}
+
 
 .pagination-number {
     font-weight: bold;
@@ -165,7 +175,7 @@ h4, h5, .phone, .email, .contribute  {
 }
 
 .fa-thumbs-up {
-    font-size: 40px;
+    font-size: 20px;
     color: rgb(237,177,79);
     background-color: rgb(1, 116, 129);
     padding: 15px;
@@ -181,9 +191,14 @@ h4, h5, .phone, .email, .contribute  {
 
 }
 
+.hr-style {
+   border-top: 10px solid white;
+}
+
 #likes_total {
     color: black;
 }
+
 
   
   /* .fa-facebook:hover,
