Troubshoot addcomment form
troubleshooting addcomment form rearrange fields in forms.py file.
views.py import datetime for commentaddview and added function to
display same. Style.css added styling for comment icon that was
added to postread.html.
remove no_of_likes field from postfrom in forms.py not applicable.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,7 +174,8 @@ h4, h5, .phone, .email, .contribute  {
 
 }
 
-.fa-thumbs-up {
+.fa-thumbs-up,
+.fa-message {
     font-size: 20px;
     color: rgb(237,177,79);
     background-color: rgb(1, 116, 129);
