--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 {% block title %}<h3 class="text-center create-title">Create Post</h3>{% endblock %} 
@@ -46,6 +48,7 @@
 
     {% csrf_token %}
     {{ form.as_p }}
+    <!-- {% crispy form %} -->
    
           <input type="submit" value="Submit" class="create-submit"/>
       <a href="{% url 'postread' %}"> 
