--- a/templates/commentupdate.html
+++ b/templates/commentupdate.html
@@ -2,10 +2,13 @@
 
 {% block content %}
 
-<h1>Construction Safety Information Blog </h1>
+<h3 class="text-center update-title">Update Comment</h3>
 
-<h>Update Comment</h>
+  <div class="container">
+    <div class="center-form col-md-6" style="margin-top: -40px">
 
+  {% if user.is_authenticated %}
+    {% if user.id == post.contributor.id %}
 
 
 <form method="post"enctype="multipart/form-data" >
@@ -13,11 +16,20 @@
     {% csrf_token %}
     {{ form.as_p }}
 
-    <input type="submit" value="Submit" />
-    <a href="{% url 'postdetail' %}">Home</a> 
-   
+    <input type="submit" value="Submit"  class="create-submit"/>
+
+    <a href="{% url 'commentadd' post.pk %}" class="commentadd-link">Add Comment </a>&nbsp;
+    <!-- <a href="{% url 'commentupdate' post.pk %}" class="commentupdate-link">Update Comment </a>&nbsp; -->
+    <a href="{% url 'commentdelete' post.pk %}" class="commentdelete-link">Delete Comment </a>&nbsp
+    <a href="{% url 'postdetail' %}">Detailed Post</a> 
+    {% endif %}
+    {% else %}
+  Please Login to add, update and delete comments.  
+
+ {% endif %}
 
 </form>
+</div>
 
 <br>
 {% endblock %}
