--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,16 @@
+/* General Page Styling */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.page-container {
+    margin: 20px;
+    min-height: calc(100vh - 20px);
+}
+
+
+
 /* Remove horizontal scroll */
 body {
     overflow-x: hidden;
@@ -35,16 +48,23 @@ body {
 
 .bg-color-main {
     height: 100vh;
-    width: 100vw;
-    /* background-color: rgb(237,177,79);
-    position: relative; */
+    /* width: 100vw; */
+    /* background-color: rgb(237,177,79);*/
+    position: relative;
 }
 
 .background-image-main {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    position: relative;
+    /* background-position: center;
+    position: relative; */
+    z-index: -1;
 } 
 
 /* Overlay coming down over main body image */
@@ -52,26 +72,27 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 170vh;
+    width: 100%;
+    height: 100%;
     background-color: rgb(237,177,79);
     opacity: 0.7;
     /* padding-bottom: 2px; */
+    z-index: 0;
 
 }
 
 .block-content {
     position: relative;
-    top: 17%;
+    /* top: 17%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
+    transform: translate(-50%, -50%); */
+    z-index: 1;
     /* margin-top: -350px;
     margin-bottom: -700px; */
-    padding: 10px;
+    /* padding: 10px;
   
 
-    color: black;
+    color: black; */
     
 
 
@@ -138,7 +159,7 @@ h4, h5, .phone, .email, .contribute  {
 .card-img-top,
 .card-placeholder {
     width: 800px;
-    height: 1000px;
+    /* height: 1000px; */
     justify-content: center;
     /* background-color: rgb(1, 116, 129); */
     gap: 10px;
@@ -321,6 +342,10 @@ h4, h5, .phone, .email, .contribute  {
   
 }
 .container-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: calc(100vh -20px)
     /* margin-top: 20%; */
    /* display: flex; */
     /* padding-left: 280px; */
