--- a/templates/commentadd.html
+++ b/templates/commentadd.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<br>
+<br>
 <h3 class="text-center">Add Comment</h3>
 <br>
 <br>
 <br>
 <div class="container">
-    <div class="center-form col-md-6" style="margin-top: -40px">
+    <div class="center-form col-md-6" >
 
 <form method="post">
     {% csrf_token %}
