General styling of heading and layout
signup.html added space between main heading and nav bar and space
between heading and h3 underneath it and removed commentd out code.
login.html added space before and after main heading.
postread added space between main heading and nav bar. Added space
between cards.
postdetail displayed home login and signup in an inline div.
Added sytling for the above in style.css.

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,14 +6,15 @@
 
 {% block content %}
 
-
+<br>
+<br>
 
 <h1 class="text-center">{% trans "Sign Up" %}</h1>
 <br>
 <br>
 <br>
 
-<h3>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</h3>
+<h3 class="text-black">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</h3>
 <br>
 <br>
 <br>
@@ -27,7 +28,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-  <!-- {% include 'messages.html' %} -->
+ 
 </form>
 </div>
 </div>
