--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,7 +135,10 @@ h4, h5, .phone, .email, .contribute  {
 
 /* postread page */
 
-
+.row-card-placeholder {
+   
+    padding: 30px;
+}
 
 .page-item,
 .page-link {
@@ -156,13 +159,26 @@ h4, h5, .phone, .email, .contribute  {
     margin: 0 auto;   
 }
 
+/* .card-img-top-detail {
+    background-color: rgb(1, 116, 129);
+} */
+.bg-special {
+    background-color: rgb(1, 116, 129);
+  
+}
+
+
 .card-img-top,
 .card-placeholder {
+ 
     width: 800px;
     /* height: 1000px; */
     justify-content: center;
     /* background-color: rgb(1, 116, 129); */
-    gap: 10px;
+    /* gap: 10px; */
+    gap: 20px;
+    margin: 0 auto;
+    display: block;
 }
 
 .card,
@@ -198,6 +214,10 @@ h4, h5, .phone, .email, .contribute  {
 
 /* postdetail page */
 
+.style-placeholder {
+    background-color: rgb(1, 116, 129);
+
+}
 
 .fa-facebook, .fa-twitter-square, .fa-instagram-square {
   font-size: 40px;
@@ -254,10 +274,10 @@ h4, h5, .phone, .email, .contribute  {
         text-decoration: none;
         font-weight: bolder; */
 
-        
-            background-color: rgb(1, 116, 129);
+/*         
+            background-color: rgb(1, 116, 129); */
             padding: 15px;
-            font-size: 20px;
+            font-size: 25px;
             color: white;
             text-decoration: none;
            
@@ -286,6 +306,7 @@ h4, h5, .phone, .email, .contribute  {
 
 .text-black {
     color: black;
+    text-align: center;
 }
 
 .login {
@@ -470,6 +491,10 @@ h4, h5, .phone, .email, .contribute  {
 
     /* signup */
 
+    .text-black {
+        text-align: center;
+    }
+
     .center-form {
         margin: 0 auto;
         max-width: 450px;
@@ -484,7 +509,11 @@ h4, h5, .phone, .email, .contribute  {
         margin-bottom: 10px;
         font-size: 30px;
        
+       
     }
+
+  
+    
 
     .signup button {
         background-color:  rgb(1, 116, 129);
