General css styling
postupdate.html add space before heading and remove margin-top of
-40px.
postread.html changed login on line circa 44 to Sign In.
postdetail.html removed home and login links from under post at
they are already in nav bar.
postdelete.html add space between heading and navbar and add h3 element
to "are you sure you want to delete" and styled submit button and
aligned to center of page.
postcreate.html changed login to sign in circa line 28.
commentupdate.html changed login to signin circa line 27.
base.html changed login to sign in circa line 126 and corrected
spelling mistake in social media links circa line 165.
forms.py under postform changed post id to post name circa line 20.
changed message at line circa 89 from name to post name.
style.css commentd hr rule from from post detail page, commented out
postdetail home, signup and login.  Delete post page centered
heading and styled submit button.

--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
             </li>
             {% else %}
             <li class="nav-item" >
-              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+              <a class="nav-link" href="{% url 'account_login' %}">Sign In</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
@@ -162,7 +162,7 @@
         <p class="contribute fs-5">Please contribute by posting on our blog. </p>
       </div>
       <div class="col-sm-4 text-center">
-        <h5>Social Meida Links</h5>
+        <h5>Social Media Links</h5>
         <ul class="list-inline social-links">
           <li class="list-inline-item">
           <a href="http://www.facebook.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on facebook link opens in new page"><i class ="fab fa-brands fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
