--- a/templates/commentupdate.html
+++ b/templates/commentupdate.html
@@ -24,7 +24,7 @@
     <a href="{% url 'postdetail' %}">Detailed Post</a> 
     {% endif %}
     {% else %}
-  Please Login to add, update and delete comments.  
+  Please Sign In to add, update and delete comments.  
 
  {% endif %}
 
