--- a/templates/postread.html
+++ b/templates/postread.html
@@ -41,7 +41,7 @@
                         &nbsp &nbsp <i class="fas fa-solid fa-message"></i>
                         {% if user.is_authenticated %}
                         {% else %}
-                        <p>Please login to like or comment on a post.</p>
+                        <p>Please Sign In to like or comment on a post.</p>
                         {% endif %}
                     </div>
                  
