--- a/static/css/style.css
+++ b/static/css/style.css
@@ -249,9 +249,9 @@ h4, h5, .phone, .email, .contribute  {
 
 }
 
-.hr-style {
+/* .hr-style {
    border-top: 10px solid white;
-}
+} */
 
 #likes_total {
     color: black;
@@ -266,9 +266,9 @@ h4, h5, .phone, .email, .contribute  {
   
   } */
 
-  .postdetail-home,
+  /* .postdetail-home,
   .postdetail-signup,
-  .postdetail-login {
+  .postdetail-login { */
   
         /* color:  rgb(237,177,79);
         text-decoration: none;
@@ -276,7 +276,7 @@ h4, h5, .phone, .email, .contribute  {
 
 /*         
             background-color: rgb(1, 116, 129); */
-            padding: 15px;
+            /* padding: 15px;
             font-size: 25px;
             color: white;
             text-decoration: none;
@@ -284,7 +284,7 @@ h4, h5, .phone, .email, .contribute  {
     
 
 
-    }
+    } */
 
 .commentadd-black,
 .commentdelete-black {
@@ -454,6 +454,31 @@ h4, h5, .phone, .email, .contribute  {
 
 .create-submit:hover {
     background-color: rgb(237,177,79);
+}
+
+/* Delete Post Page */
+
+.delete-post-content {
+    text-align: center;
+}
+
+.postdelete-submit {
+   
+
+        background-color:  rgb(1, 116, 129);
+        padding: 10px;
+        font-size: 20px;
+        color: white;
+        text-decoration: none;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+      
+        margin-top: 200px;
+        
+
 }
 
 
