--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -25,7 +25,7 @@
   
   {% if user.is_authenticated %}
     {% if user.id == post.contributor.id %}
-    Please Login to update post. 
+    Please Sign In to update post. 
  
   {% else %}
   <a href="{% url 'postread' %}"> 
