--- a/templates/postdelete.html
+++ b/templates/postdelete.html
@@ -2,8 +2,12 @@
 
 {% block content %}
 
-<h1>Construction Safety Information Blog</h1>
-<h3>Delete Post</h3>
+<br>
+<br>
+<h1 class="text-center">Delete Post</h3>
+  <br>
+  <br>
+  <br>
 
 {% if user.is_authenticated %}
 {% if user.id == post.contributor.id %}
@@ -11,9 +15,12 @@
 <form method="post">
 
     {% csrf_token %}
-    Are you sure you want to delete "{{ object }}" ?
+    <h3 class="delete-post-content">Are you sure you want to delete "{{ object }}" ?</h3>
+    <br>
+    <br>
+    <br>
 
-    <input type="Submit" value="Submit">
+    <input type="Submit" value="Submit" class="postdelete-submit" >
   {% else %}
   Please  not allowed to perform this action.  
 </form>
