--- a/templates/postupdate.html
+++ b/templates/postupdate.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<br>
+<br>
 
   <h3 class="text-center update-title">Update Post</h3>
 
   <div class="container">
-    <div class="center-form col-md-6" style="margin-top: -40px">
+    <div class="center-form col-md-6">
 
   {% if user.is_authenticated %}
     {% if user.id == post.contributor.id %}
+<br>
 
 
   <form method="POST" enctype="multipart/form-data" >
@@ -26,7 +28,7 @@
  {% endif %}
   </form>
     </div>
-  <br>
+
 
  
     
