--- a/templates/postdelete.html
+++ b/templates/postdelete.html
@@ -13,7 +13,6 @@
 {% if user.id == post.contributor.id %}
 
 <form method="post">
-
     {% csrf_token %}
     <h3 class="delete-post-content">Are you sure you want to delete "{{ object }}" ?</h3>
     <br>
@@ -22,7 +21,7 @@
 
     <input type="Submit" value="Submit" class="postdelete-submit" >
   {% else %}
-  Please  not allowed to perform this action.  
+  You are not allowed to perform this action.  
 </form>
 {% endif %}
 {% endif %}
